# livedoor-news-classifier

./: .gitignore  Makefile  PIPELINE.md  docker-compose.yaml  dvc.yaml  params.yaml  pyproject.toml
notebooks/: code-sketch.ipynb
src/: encoder.py  init_qdrant.py  make_dataset.py  search.py
