[tool.poetry]
name = "livedoor-news-classifier"
version = "0.1.0"
description = ""
authors = ["u-masao"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.20.0"
cloudpickle = "^3.0.0"
polars = "^1.3.0"
xlsxwriter = "^3.2.0"
langchain-text-splitters = "^0.2.2"
torch = "^2.4.0"
transformers = "^4.43.3"
sentence-transformers = "^3.0.1"
qdrant-client = "^1.10.1"
gradio = "^4.40.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.0"
black = "^24.4.2"
dvc = "^3.53.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
